Backend/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: realestate
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
